--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,4 +1,10 @@
 /* //!STARTERCONF Remove this file after copying your desired color, this is a large file you should remove it. */
+:root {
+    --base-unit: 8px;
+}
+.sv-tagbox__item {
+    height: calc(3 * 12px)
+}
 
 .rose {
   --tw-color-primary-50: 255 241 242;
